fix: overflow

--- a/src/components/ScrollUp.module.sass
+++ b/src/components/ScrollUp.module.sass
@@ -7,6 +7,7 @@
     cursor: pointer
     background: none
     border: none
+    z-index: 99
 
     svg
         fill: transparent
