--- a/src/styles/all.sass
+++ b/src/styles/all.sass
@@ -8,6 +8,7 @@
 html
   font-size: 62.5% !important
   font-family: tokens.$text-font
+  overflow-x: hidden
 
 body
   margin: 0
